modified:   index-flame-animation.html

--- a/index-flame-animation.html
+++ b/index-flame-animation.html
@@ -75,6 +75,7 @@
         <h1>Animaciones de Velas con HTML y CSS</h1>
         <p class="description">Explora diversas animaciones de velas creadas usando solo HTML y CSS. Cada animación presenta una vela blanca con una llama animada y chispas, diseñadas para ser visualmente atractivas y realistas.</p>
         <p class="description">Prompt: Create a white candle with a single flame using only pure CSS and HTML. The flame should be animated with realistic movement and have a small space between it and the candle. The sparks should also be animated with smooth movements. Ensure the overall design is visually appealing and lifelike.</p>
+        <p class="description">GitHub Repository: <a href="https://github.com/alexandrucruceanu/flame-animation.git" target="_blank">https://github.com/alexandrucruceanu/flame-animation.git</a></p>
         <ul>
             <li>
                 <div class="preview-container">
