--- a/index-flame-animation.html
+++ b/index-flame-animation.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animaciones de Velas con HTML y CSS</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+    <script src="https://cdn.counter.dev/script.js" data-id="e8641ba6-ab2e-49c4-bf7d-de9c9c149a4d" data-utcoffset="1"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
