--- a/index-flame-animation.html
+++ b/index-flame-animation.html
@@ -16,7 +16,7 @@
             padding: 20px;
         }
         .container {
-            max-width: 900px;
+            max-width: 1200px;
             margin: 0 auto;
             background-color: #1e1e1e;
             padding: 20px;
@@ -43,20 +43,22 @@
             border: 1px solid #444;
             border-radius: 4px;
             display: flex;
+            flex-direction: column;
             align-items: center;
         }
         .preview-container {
-            flex: 1;
-            margin-right: 20px;
+            width: 100%;
+            margin-bottom: 10px;
         }
         .preview {
-            width: 450px;
+            width: 100%;
             height: 450px;
             border: 1px solid #444;
             border-radius: 4px;
         }
         .content {
-            flex: 2;
+            width: 100%;
+            text-align: center;
         }
         a {
             text-decoration: none;
@@ -70,6 +72,20 @@
             color: #bbbbbb;
             margin-top: 8px;
             line-height: 1.4;
+        }
+        @media (min-width: 768px) {
+            li {
+                flex-direction: row;
+            }
+            .preview-container {
+                flex: 1;
+                margin-right: 20px;
+                margin-bottom: 0;
+            }
+            .content {
+                flex: 2;
+                text-align: left;
+            }
         }
     </style>
 </head>
@@ -171,7 +187,6 @@
                 </div>
             </li>
         </ul>
-        
     </div>
 </body>
 </html>
